Upload From Git Bash

--- a/index.html
+++ b/index.html
@@ -1,109 +1,5 @@
 <!DOCTYPE HTML>
-<html>
-	<head>
-		<link rel="icon" href="icons/website.ico">
-		<link rel="stylesheet" href="style.css">
-		<title>Gvbvdxx website maker</title>
-	</head>
-	<body>
-		<input type="file" hidden id="fileimport" onchange="this.innerHTML = ''; fileImported(this);" accept="image/*,audio/*">
-		<input type="file" hidden id="loadfile" onchange="this.innerHTML = ''; fileLoaded(this);" accept=".gwmf">
-		
-		<div class="tab1div">
-			<center>
-				<div class="tab1" id="websiteTab"><img src="icons/website.ico" width=16 height=16>Website</div>
-				<div class="tab1" id="filesTab"><img src="icons/folder.ico" width=16 height=16>Files</div>
-				<div class="tab1" id="infoTab"><img src="icons/clipboard.ico" width=16 height=16>Info</div>
-			</center>
-		</div>
-		
-		<div id="website" style="display:block;" class="window">
-			<div style="width:100%; height:25px; background-color:grey;">
-				<select style="height:25px; width:100px; float:left;" id="Element">
-					<optgroup label="Lines">
-						<option value="hr">Separator</option>
-						<option value="br">New Line</option>
-					</optgroup>
-					<optgroup label="Text">
-						<option value="h1">Header Text</option>
-						<option value="p">Text</option>
-					</optgroup>
-					<optgroup label="Clickable">
-						<option value="a">Link</option>
-					</optgroup>
-					<optgroup label="Coding">
-						<option value="div">Costom HTML</option>
-					</optgroup>
-					<optgroup label="Interactive">
-						<option value="audio">Audio Player</option>
-						<option value="video">Video Player</option>
-						<option value="img">Image</option>
-						<option value="iframe">Embed</option>
-					</optgroup>
-					<optgroup label="Other">
-						
-					</optgroup>
-				</select>
-				<button style="height:25px; width:100px; float:left;" id="AddElement">Add element</button>
-				<button style="height:25px; width:100px; float:left;" id="Undo">Undo</button>
-				<p class="bold" style="font-size:10px; float:left;">Font:</p>
-				<select style="height:25px; width:100px; float:left;" id="Font" onchange="document.getElementById('FontPreview').style.fontFamily = this.value;">
-					<optgroup label="Fonts">
-						<option value="arial">Arial</option>
-						<option value="verdana">Verdana</option>
-						<option value="helvetica">Helvetica</option>
-						<option value="tahoma">Tahoma</option>
-						<option value="georgia">Georgia</option>
-					</optgroup>
-				</select>
-				<p class="bold" style="font-size:10px; float:left;">File:</p>
-				<select style="height:25px; width:100px; float:left;" id="FileSelector">
-					<optgroup label="Files" id="FileSelect">
-					</optgroup>
-				</select>
-				<p class="bold" style="font-size:10px; float:left;">Page Color:</p>
-				<input type="color" id="pgColor" style="height:25px; width:40px; float:left;" value="#ffffff">
-			</div>
-			<center id="centerPage" style="width:100%; height:95.9%; background-color:white; overflow-y: auto;">
-				<div id="currentWebsite">
-				</div>
-			</center>
-		</div>
-		<div id="files" style="display:none;" class="window">
-			<center><button onclick="document.getElementById('fileimport').click();" style="width:100%;"><img src="icons/folder.ico" width=16>Import</button></center>
-			<center style="width:100%; height:93.9%; background-color:white; overflow-y: auto;">
-				<div id="ImportedFiles"></div>
-			</center>
-		</div>
-		<div id="info" style="display:none;" class="window">
-			<center>
-				<h1>Basic Info</h1>
-				<hr>
-				<br>
-				<label for="title">Webpage title:</label>
-				<input type="text" value="My Website" id="title">
-				<br>
-				<label for="favicon">Webpage favicon (name in files):</label>
-				<select style="" id="favicon">
-					<optgroup label="Files" id="FileSelect2">
-						<option value="">None</option>
-					</optgroup>
-				</select>
-				<br>
-				<h1>Export Options</h1>
-				<hr>
-				<br>
-				<button width="25" height="100" id="exportHTML">Export HTML</button>
-				<button width="25" height="100" id="exportHTA">Export HTA</button>
-				<button width="25" height="100" id="save">Save</button>
-				<button width="25" height="100" id="load">Load</button>
-			</center>
-		</div>
-		
-		
-		
-		<script src="scripts/index.js"></script>
-		<script src="scripts/exporter.js"></script>
-		<script src="scripts/defalutData.js"></script>
-	</body>
-</html>
+
+<script>
+window.location.replace("version2/index.html")
+</script>
