--- a/version2/index.html
+++ b/version2/index.html
@@ -41,7 +41,7 @@
 						<option value="iframe">Embed</option>
 					</optgroup>
 					<optgroup label="Other">
-						
+						<option value="bgm">Background Music</option>
 					</optgroup>
 				</select>
 				<button style="height:25px; width:100px; float:left;" id="AddElement">Add element</button>
@@ -71,7 +71,7 @@
 		</div>
 		<div id="files" style="display:none;" class="window">
 			<center><button onclick="document.getElementById('fileimport').click();" style="width:100%;"><img src="icons/folder.ico" width=16>Import</button></center>
-			<center style="width:100%; height:93.9%; background-color:white; overflow-y: auto;">
+			<center style="width:100%; height:93.9%; background-color:#303030; overflow-y: auto;">
 				<div id="ImportedFiles"></div>
 			</center>
 		</div>
@@ -104,6 +104,5 @@
 		
 		<script src="scripts/index.js"></script>
 		<script src="scripts/exporter.js"></script>
-		<script src="scripts/defalutData.js"></script>
 	</body>
 </html>
