--- a/version3/index.html
+++ b/version3/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- Web Manifest -->
+		<link rel="manifest" href="manifest.json">
 		<link rel="icon" href="icons/website.ico">
 		<link rel="stylesheet" href="style.css">
 		<title>Gvbvdxx website maker</title>
